# spelling-bee-solver

./: .dockerignore  Dockerfile  Dockerfile.slim  README.md  docker-compose.yaml  entrypoint.py  entrypoint.sh  pyproject.toml  requirements.txt
app/: app.py
app/static/: style.css
app/templates/: form.html
