[project]
name = "spelling-bee-solver"
version = "0.1.0"
description = "Your application description"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "Werkzeug",
    "numpy",
    "apscheduler",
    "playwright==1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]